tests/errors/well-formed/missing-parameter.fil
extern "dummy.sv" {
  comp Identity[A, B, ?C=A+B]<'G: 1>(
    go: interface['G],
     in: ['G, 'G+1] 32,
  ) -> (
     out: ['G, 'G+1] 32,
  );
}

comp main<'G: 1>(
    go: interface['G],
     in: ['G, 'G+1] 32,
) -> (
     out: ['G, 'G+1] 32
) {
    valid1 := new Identity[1, 2]<'G>(in);
    valid2 := new Identity[1, 2, 4]<'G>(valid1.out);
    invalid := new Identity[1]<'G>(valid2.out);
    out = invalid.out;
}